alpm-types/src/version/snapshots/base::invalid_pkgrel@case_5.snap
---
source: alpm-types/src/version/base.rs
---
error: invalid package release
 | 
 | a
 | ^ expected positive decimal integer
